--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ services:
       MYSQL_ROOT_PASSWORD: drupal
     volumes:
       - db_data:/var/lib/mysql
-    restart: always
   drupal:
     depends_on:
       - db
@@ -18,7 +17,7 @@ services:
       - "8080:80"
     volumes:
       - ./drupal:/app
-    restart: always
+    command: ./checkinstall
   gatsby:
     build:
       context: .
