--- a/Dockerfile-drupal
+++ b/Dockerfile-drupal
@@ -24,4 +24,4 @@ WORKDIR /app
 
 COPY drupal .
 
-RUN echo "Drupal installation will begin after the containers have all come up - if you get a 404 page, please wait a few minutes and refresh again."
+RUN composer install
