Changes from process improvements

--- a/Dockerfile-drupal
+++ b/Dockerfile-drupal
@@ -21,3 +21,7 @@ RUN rm -rf /var/www/html/*
 COPY apache-drupal.conf /etc/apache2/sites-enabled/000-default.conf
 
 WORKDIR /app
+
+COPY drupal .
+
+RUN composer install
