--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     volumes:
       - ./gatsby:/app
       - ./drupal/web/sites/default/files:/app/static/drupal-files
+      - ~/.ssh:/root/.ssh
     command: tail -f /dev/null
 volumes:
   db_data:
